--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         <a class="nav-link" href="#">Browse Items</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="login.html">Login/Signup</a>
+                        <a class="nav-link" href="login.php">Login/Signup</a>
                     </li>
                 </ul>
             </div>
